fixed scrollbar bugt

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -77,7 +77,9 @@
   }
 
   &__nav__link {
-    padding: 0 0.5rem;
+    padding: 0.4rem 0.5rem;
+    border-radius: 0.25rem;
+    transition: color 0.33s ease, background-color 0.33s ease;
 
     &__content {
       // width: 1.25rem;
@@ -98,8 +100,9 @@
   }
 }
 
-.header__nav-link:hover {
-  background: #0000001c;
+.header__nav__link:hover {
+  background: rgba(0, 0, 0, 0.1098039216);
+  // background: #171a20;
 }
 
 .menu-btn {
@@ -133,6 +136,11 @@
   animation-name: example;
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
+  cursor: pointer;
+}
+
+.down-icon:active {
+  color: black;
 }
 
 @keyframes example {
