--- a/app/scss/_navigation.scss
+++ b/app/scss/_navigation.scss
@@ -3,13 +3,17 @@
   top: 0;
   right: 0;
   width: 19.5rem;
-  overflow-y: scroll;
+  overflow-y: hidden;
+  // overflow-y: hidden;
   // max-width: 21.875rem;
   height: 100%;
   z-index: 10;
   background: #fff;
   transform: translateX(100%);
   transition: transform 0.5s cubic-bezier(0.5, 0, 0, 0.75);
+  @include breakpoint-down(medium) {
+    overflow-y: scroll;
+  }
 
   &__links-container li {
     width: 100%;
@@ -50,6 +54,8 @@
   &__close-btn {
     text-align: right;
     margin: 1.25rem;
+    border: 0;
+    // cursor: pointer;
 
     &__img {
       border-radius: 0.25rem;
